service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-app
  namespace: react-app
spec:
  type: ClusterIP

  selector:
    app: react-app

  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
