ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-app
  namespace: react-app
spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: react-app
                port:
                  number: 80
